# lynniphone

./: .gitmodules  README.md  setup.cfg  setup.py
config/boot/: config.txt
config/etc/: lynniphone.service  rc.local
config/home/: .bashrc
notes/: Notes.md  Setup.md
src/init/: init.py  init.sh
src/init/boot/: config.txt
src/rfid/: test-write.py
