[metadata]
name = milanophone
version = 0.0.1
author = brandli
author_email = author@example.com
description = Music station for kids
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brandli/milanophone
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6